# Fast-API

./: csv.csv  main.py  pyproject.toml
API/: courses.py  sections.py  users.py
db/: db_setup.py
